--- a/html/index.html
+++ b/html/index.html
@@ -4,92 +4,125 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bienvenido a Mente Libre</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
 <body>
-    <nav>
-        <div class="logoNav">
-            <a href="index.html">
-                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark-custom shadow-sm">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo-lg">
+                <h1 class="h3 ms-2 mb-0 text-white">Mente Libre</h1>
             </a>
-            <h1>Mente Libre</h1>
-        </div>
-        <div style="display: flex; gap: 15px; align-items: center; flex-wrap: wrap;">
-             <a href="quienes-somos.html">Quiénes somos</a>
-             <a href="foro.html">Foro</a>
-             <a href="perfil.html" id="perfilLinkNav" style="display: none;">Perfil</a>
-             <a href="registro.html" id="registroLinkNav">Registrarse</a>
-             <a href="../html/login.html" id="loginLinkNav">Iniciar Sesión</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="mainNav">
+                <div class="navbar-nav ms-auto align-items-center">
+                    <a class="nav-link text-white" href="quienes-somos.html">Quiénes somos</a>
+                    <a class="nav-link text-white" href="foro.html">Foro</a>
+                    <a class="nav-link text-white" href="perfil.html" id="perfilLinkNav" style="display: none;">Perfil</a>
+                    <a class="nav-link" href="registro.html" id="registroLinkNav">
+                        <button class="btn btn-outline-light btn-sm">Registrarse</button>
+                    </a>
+                    <a class="nav-link" href="login.html" id="loginLinkNav">
+                        <button class="btn btn-primary btn-sm">Iniciar Sesión</button>
+                    </a>
+                </div>
+            </div>
         </div>
     </nav>
 
-    <div class="contenedor-principal">
-        <section class="hero-section">
-            <div class="hero-text">
-                <h1>Mente Libre</h1>
-                <h2>Una pausa para respirar, un espacio para vivir.</h2>
-                <h3>No estás solo. Aquí encontrarás recursos y una comunidad donde podrás cuidar tu salud mental.</h3>
-                <div class="btns">
-                    <button class="btn-primary" onclick="location.href='contacto.html'">Busca ayuda ahora</button>
-                    <button class="btn-secondary" onclick="location.href='foro.html'">Explorar la comunidad</button>
+    <main>
+        <div class="container">
+            <section class="row align-items-center py-5 my-5">
+                <div class="col-lg-6">
+                    <h1>Mente Libre</h1>
+                    <h2 class="h3 fw-light">Una pausa para respirar, un espacio para vivir.</h2>
+                    <h3 class="h5 fw-light text-muted mb-4">No estás solo. Aquí encontrarás recursos y una comunidad donde podrás cuidar tu salud mental.</h3>
+                    <div class="d-flex gap-2 flex-wrap">
+                        <button class="btn btn-primary btn-lg" onclick="location.href='contacto.html'">Busca ayuda ahora</button>
+                        <button class="btn btn-secondary btn-lg" onclick="location.href='foro.html'">Explorar la comunidad</button>
+                    </div>
+                </div>
+                <div class="col-lg-6 text-center mt-4 mt-lg-0">
+                    <img src="../imagenes/afiche-apoyo.png" alt="Apoyo emocional" class="img-fluid" style="max-height: 400px;">
+                </div>
+            </section>
+
+            <section class="row align-items-center py-5 bg-light rounded-3">
+                <div class="col-lg-6 text-center">
+                    <img src="../imagenes/acompanamiento.png" alt="Acompañamiento" class="img-fluid" style="max-width: 400px;">
+                </div>
+                <div class="col-lg-6 mt-4 mt-lg-0">
+                    <div class="p-4">
+                        <h2 class="text-primary">Nuestro objetivo</h2>
+                        <p class="lead">En Mente Libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Buscamos aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretendemos reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
+                    </div>
+                </div>
+            </section>
+
+            <section class="py-5 my-5 text-center">
+                <h3 class="mb-4">¿Qué encontrarás en nuestro foro?</h3>
+                <div class="row g-4">
+                    <div class="col-md-4">
+                        <div class="card h-100 shadow-sm">
+                            <div class="card-body p-4">
+                                <img src="../imagenes/foro.png" alt="Foro de apoyo" class="img-fluid" style="height: 120px;">
+                                <h4 class="card-title text-primary mt-3">Foro de apoyo emocional</h4>
+                                <p class="card-text">Comparte experiencias y recibe apoyo de la comunidad</p>
+                                <button onclick="location.href='foro.html'" class="btn btn-outline-primary">Acceder</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card h-100 shadow-sm">
+                            <div class="card-body p-4">
+                                <img src="../imagenes/chat.png" alt="Chat" class="img-fluid" style="height: 120px;">
+                                <h4 class="card-title text-primary mt-3">Chat con especialistas</h4>
+                                <p class="card-text">Habla con profesionales de la salud mental</p>
+                                <button onclick="location.href='contacto.html'" class="btn btn-outline-primary">Contactar</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-4">
+                        <div class="card h-100 shadow-sm">
+                            <div class="card-body p-4">
+                                <img src="../imagenes/contacto-emergencia.png" alt="Emergencia" class="img-fluid" style="height: 120px;">
+                                <h4 class="card-title text-primary mt-3">Contactos de emergencia</h4>
+                                <p class="card-text">Números y recursos para situaciones críticas</p>
+                                <button onclick="location.href='contacto.html'" class="btn btn-outline-primary">Ver contactos</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </section>
+        </div>
+
+        <section class="bg-primary text-white text-center p-5">
+            <div class="container">
+                <h1>Tu participación es clave</h1>
+                <p class="lead my-4">Ya sea que necesites ayuda, quieras ofrecerla o desees unirte a nuestra comunidad, aquí hay un lugar para ti. Juntos, podemos construir un espacio de esperanza y sanación.</p>
+                <div class="d-flex gap-3 justify-content-center flex-wrap">
+                    <button onclick="location.href='foro.html'" class="btn btn-light btn-lg">Unirse al foro</button>
+                    <button onclick="location.href='contacto.html'" class="btn btn-outline-light btn-lg">Contactar especialista</button>
+                    <button onclick="location.href='quienes-somos.html'" class="btn btn-outline-light btn-lg">Aprende a apoyar</button>
                 </div>
             </div>
-            <div class="hero-image">
-                <img src="../imagenes/afiche-apoyo.png" alt="Apoyo emocional">
-            </div>
         </section>
+    </main>
 
-        <section class="objetivo-section">
-            <img src="../imagenes/acompanamiento.png" alt="Acompañamiento" style="max-width: 400px;">
-            <div class="objetivo-box">
-                <h2>Nuestro objetivo</h2>
-                <p>En Mente Libre nuestro principal objetivo con el foro de salud mental es promover el bienestar emocional y prevenir el suicidio mediante educación, apoyo y estrategias integrales. Buscamos aumentar la conciencia sobre los signos de alerta, facilitar la detección temprana y ofrecer acompañamiento psicológico. Además, pretendemos reducir el estigma, fortalecer la resiliencia y disminuir los factores de riesgo asociados.</p>
+    <footer class="bg-dark-custom text-white p-4 mt-5">
+        <div class="container d-flex justify-content-between align-items-center flex-wrap">
+            <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+            <div class="d-flex gap-3">
+                <a href="contacto.html" class="text-white">Contacto</a>
+                <a href="quienes-somos.html" class="text-white">Quiénes somos</a>
             </div>
-        </section>
-
-        <section class="servicios-section">
-            <h3>¿Qué encontrarás en nuestro foro?</h3>
-            <div class="servicios-grid">
-                <div class="servicio-card">
-                    <img src="../imagenes/foro.png" alt="Foro de apoyo">
-                    <h4>Foro de apoyo emocional</h4>
-                    <p>Comparte experiencias y recibe apoyo de la comunidad</p>
-                    <button onclick="location.href='foro.html'">Acceder</button>
-                </div>
-                <div class="servicio-card">
-                    <img src="../imagenes/chat.png" alt="Chat">
-                    <h4>Chat con especialistas</h4>
-                    <p>Habla con profesionales de la salud mental</p>
-                    <button onclick="location.href='contacto.html'">Contactar</button>
-                </div>
-                <div class="servicio-card">
-                    <img src="../imagenes/contacto-emergencia.png" alt="Emergencia">
-                    <h4>Contactos de emergencia</h4>
-                    <p>Números y recursos para situaciones críticas</p>
-                    <button onclick="location.href='contacto.html'">Ver contactos</button>
-                </div>
-            </div>
-        </section>
-
-        <section class="cta-section">
-            <h1>Tu participación es clave</h1>
-            <p>Ya sea que necesites ayuda, quieras ofrecerla o desees unirte a nuestra comunidad, aquí hay un lugar para ti. Juntos, podemos construir un espacio de esperanza y sanación.</p>
-            <div class="cta-buttons">
-                <button onclick="location.href='foro.html'">Unirse al foro</button>
-                <button onclick="location.href='contacto.html'">Contactarse con un especialista</button>
-                <button onclick="location.href='quienes-somos.html'">Aprende a apoyar a otros</button>
-            </div>
-        </section>
-    </div>
-
-    <footer>
-        <p>&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
-        <div class="footer-links">
-            <a href="contacto.html">Contacto</a>
-            <a href="quienes-somos.html">Quiénes somos</a>
         </div>
     </footer>
 
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/auth.js"></script>
     <script>
          function actualizarNavIndex(loggedIn, userData) {
@@ -108,29 +141,31 @@
                     logoutLink = document.createElement('a');
                     logoutLink.href = '#';
                     logoutLink.id = 'logoutLinkNav';
-                    logoutLink.textContent = 'Cerrar Sesión';
-                    logoutLink.onclick = function(event) {
+                    logoutLink.className = 'nav-link';
+                    
+                    const logoutButton = document.createElement('button');
+                    logoutButton.className = 'btn btn-outline-warning btn-sm';
+                    logoutButton.textContent = 'Cerrar Sesión';
+                    
+                    logoutButton.onclick = function(event) {
                         event.preventDefault();
                         if (confirm('¿Estás seguro de que deseas cerrar sesión?')) {
                             cerrarSesion();
                         }
                     };
-                    logoutLink.style.cursor = 'pointer';
-                    logoutLink.style.color = 'white';
-                     logoutLink.style.fontSize = '18px';
+                    logoutLink.appendChild(logoutButton);
                     navDiv.appendChild(logoutLink);
                 } else if (logoutLink) {
-                   logoutLink.style.display = 'inline';
+                   logoutLink.style.display = 'inline-block';
                 }
 
             } else {
                 if (perfilLinkNav) perfilLinkNav.style.display = 'none';
-                if (registroLinkNav) registroLinkNav.style.display = 'inline';
-                if (loginLinkNav) loginLinkNav.style.display = 'inline';
+                if (registroLinkNav) registroLinkNav.style.display = 'inline-block';
+                if (loginLinkNav) loginLinkNav.style.display = 'inline-block';
                 if (logoutLink) logoutLink.style.display = 'none';
             }
         }
-
         onAuthStatusChecked(actualizarNavIndex);
     </script>
 </body>
