--- a/html/perfil.html
+++ b/html/perfil.html
@@ -4,41 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mente Libre - Perfil de Usuario</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
-    <header>
-        🧠 Mente Libre
-        </header>
+<body class="bg-light d-flex flex-column">
+    <header class="navbar navbar-dark bg-dark-custom shadow-sm">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo-lg">
+                <span class="h3 ms-2 mb-0 text-white">Mente Libre</span>
+            </a>
+        </div>
+    </header>
 
-    <section class="perfil-usuario">
-        <img src="https://via.placeholder.com/150" alt="Foto de usuario" id="userAvatar">
-        <h2 id="userName"></h2>
-        <p id="userEmail"></p>
-        <p>Título: <strong id="userKarmaTitle"></strong></p>
-        <p>Reputación: <strong id="userReputacion"></strong></p>
+    <main class="container my-5">
+        <div class="row justify-content-center">
+            <div class="col-md-8 col-lg-6">
+                <div class="card shadow-sm border-0 text-center">
+                    <div class="card-body p-4 p-lg-5">
+                        <img src="https://via.placeholder.com/150" alt="Foto de usuario" id="userAvatar" class="rounded-circle mb-3">
+                        <h2 id="userName" class="text-primary h3"></h2>
+                        <p id="userEmail" class="text-muted"></p>
+                        <p>Título: <strong id="userKarmaTitle" class="badge bg-secondary-subtle text-secondary-emphasis rounded-pill"></strong></p>
+                        <p>Reputación: <strong id="userReputacion" class="text-primary"></strong></p>
 
-        <div class="estadisticas" style="margin-top: 15px;">
-            <div>
-                <h3 id="userSessions">--</h3>
-                <span>Sesiones (Próximamente)</span>
+                        <div class="d-flex justify-content-around my-4">
+                            <div>
+                                <h3 id="userSessions" class="h1">--</h3>
+                                <span class="text-muted small">Sesiones (Próx.)</span>
+                            </div>
+                            <div>
+                                <h3 id="userMood" class="h1">--</h3>
+                                <span class="text-muted small">Ánimo (Próx.)</span>
+                            </div>
+                        </div>
+
+                        <div class="d-flex gap-2 justify-content-center">
+                            <button class="btn btn-primary" onclick="editarPerfil()">Editar Perfil</button>
+                            <button class="btn btn-secondary" onclick="cerrarSesion()">Cerrar Sesión</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="text-center mt-4">
+                    <a href="index.html">← Volver al inicio</a>
+                </div>
             </div>
-            <div>
-                <h3 id="userMood">--</h3>
-                <span>Ánimo (Próximamente)</span>
-            </div>
         </div>
+    </main>
 
-        <div class="botones-perfil">
-            <button class="btn-primary" onclick="editarPerfil()">Editar Perfil</button>
-            <button class="btn-secondary" onclick="cerrarSesion()">Cerrar Sesión</button>
+    <footer class="bg-dark-custom text-white p-4 mt-auto">
+        <div class="container d-flex justify-content-between align-items-center flex-wrap">
+            <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+            <a href="contacto.html" class="text-white">Contacto</a>
         </div>
+    </footer>
 
-        <div style="margin-top: 30px;">
-            <a href="index.html" style="color: #3c4fff; font-weight: bold;">← Volver al inicio</a>
-        </div>
-    </section>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/auth.js"></script>
     <script src="../js/perfil.js"></script>
 </body>
