--- a/html/quienes-somos.html
+++ b/html/quienes-somos.html
@@ -4,87 +4,115 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mente Libre - Quiénes Somos</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
-    <header>
-        <img src="../imagenes/logo.png" style="height: 50px; width: auto;"> Mente Libre
+<body class="bg-light d-flex flex-column">
+    <header class="navbar navbar-dark bg-dark-custom shadow-sm">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo-lg">
+                <span class="h3 ms-2 mb-0 text-white">Mente Libre</span>
+            </a>
+        </div>
     </header>
 
-    <main class="contenedor-quienes">
-        <section class="intro">
-            <h1>Quiénes Somos</h1>
-            <p>
-                En <strong>Mente Libre</strong> creemos que la salud mental debe ser accesible, cercana y humana.
-                Somos un equipo de jóvenes comprometidos con el bienestar emocional, que busca ofrecer apoyo psicológico y herramientas digitales innovadoras para mejorar la calidad de vida de las personas.
-            </p>
-        </section>
+    <main class="container my-5">
+        <div class="card shadow-sm border-0">
+            <div class="card-body p-4 p-lg-5">
+                <section class="text-center mb-5">
+                    <h1 class="text-primary">Quiénes Somos</h1>
+                    <p class="lead text-muted col-lg-8 mx-auto">
+                        En <strong>Mente Libre</strong> creemos que la salud mental debe ser accesible, cercana y humana.
+                        Somos un equipo de jóvenes comprometidos con el bienestar emocional, que busca ofrecer apoyo psicológico y herramientas digitales innovadoras para mejorar la calidad de vida de las personas.
+                    </p>
+                </section>
 
-        <section class="equipo">
-            <h2>Conoce a nuestro equipo</h2>
+                <section class="mb-5">
+                    <h2 class="text-center mb-4">Conoce a nuestro equipo</h2>
+                    <div class="row g-4 justify-content-center">
+                        <div class="col-md-4 col-lg-3">
+                            <div class="card h-100 text-center shadow-sm">
+                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Yerko León" style="width: 120px; height: 120px;">
+                                <div class="card-body">
+                                    <h3 class="h5 card-title text-primary">Yerko León</h3>
+                                    <p class="card-text text-muted mb-2">Desarrollador Frontend</p>
+                                    <p class="small">Encargado del diseño visual y la experiencia del usuario.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-3">
+                            <div class="card h-100 text-center shadow-sm">
+                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Yamilet Ulloa" style="width: 120px; height: 120px;">
+                                <div class="card-body">
+                                    <h3 class="h5 card-title text-primary">Yamilet Ulloa</h3>
+                                    <p class="card-text text-muted mb-2">Desarrollador Frontend</p>
+                                    <p class="small">Encargada del diseño visual y la experiencia del usuario.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-3">
+                            <div class="card h-100 text-center shadow-sm">
+                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Cristóbal Aravena" style="width: 120px; height: 120px;">
+                                <div class="card-body">
+                                    <h3 class="h5 card-title text-primary">Cristóbal Aravena</h3>
+                                    <p class="card-text text-muted mb-2">Desarrollador Backend</p>
+                                    <p class="small">Encargado de la arquitectura y el funcionamiento interno.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-3">
+                            <div class="card h-100 text-center shadow-sm">
+                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Francisco Navarrete" style="width: 120px; height: 120px;">
+                                <div class="card-body">
+                                    <h3 class="h5 card-title text-primary">Francisco Navarrete</h3>
+                                    <p class="card-text text-muted mb-2">Desarrollador Backend</p>
+                                    <p class="small">Encargado de la arquitectura y el funcionamiento interno.</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4 col-lg-3">
+                            <div class="card h-100 text-center shadow-sm">
+                                <img src="https://via.placeholder.com/120" class="card-img-top rounded-circle mx-auto mt-3" alt="Diego Reyes" style="width: 120px; height: 120px;">
+                                <div class="card-body">
+                                    <h3 class="h5 card-title text-primary">Diego Reyes</h3>
+                                    <p class="card-text text-muted mb-2">Desarrollador Backend</p>
+                                    <p class="small">Encargado de la base de datos.</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
 
-            <div class="miembros">
-                <div class="tarjeta">
-                    <img src="https://via.placeholder.com/120" alt="Yerko León">
-                    <h3>Yerko León</h3>
-                    <p>Desarrollador Frontend</p>
-                    <p class="bio">Encargado del diseño visual y la experiencia del usuario en Mente Libre.</p>
+                <div class="row g-4">
+                    <div class="col-md-6">
+                        <div class="card bg-light p-4 h-100">
+                            <h2 class="text-primary h4">Nuestra misión</h2>
+                            <p>Promover el bienestar emocional mediante el uso de la tecnología, brindando herramientas accesibles y seguras que permitan a las personas cuidar su salud mental desde cualquier lugar.</p>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="card bg-light p-4 h-100">
+                            <h2 class="text-primary h4">Nuestra visión</h2>
+                            <p>Ser una plataforma líder en apoyo psicológico digital, reconocida por su compromiso ético, humano e innovador con la comunidad.</p>
+                        </div>
+                    </div>
                 </div>
 
-                <div class="tarjeta">
-                    <img src="https://via.placeholder.com/120" alt="Yamilet Ulloa">
-                    <h3>Yamilet Ulloa</h3>
-                    <p>Desarrollador Frontend</p>
-                    <p class="bio">Encargada del diseño visual y la experiencia del usuario en Mente Libre.</p>
-                </div>
-
-                <div class="tarjeta">
-                    <img src="https://via.placeholder.com/120" alt="Cristóbal Aravena">
-                    <h3>Cristóbal Aravena</h3>
-                    <p>Desarrollador Backend</p>
-                    <p class="bio">Encargado de la arquitectura y el funcionamiento interno de la aplicación.</p>
-                </div>
-
-                <div class="tarjeta">
-                    <img src="https://via.placeholder.com/120" alt="Francisco Navarrete">
-                    <h3>Francisco Navarrete</h3>
-                    <p>Desarrollador Backend</p>
-                    <p class="bio">Encargado de la arquitectura y el funcionamiento interno de la aplicación.</p>
-                </div>
-
-                <div class="tarjeta">
-                    <img src="https://via.placeholder.com/120" alt="Diego Reyes">
-                    <h3>Diego Reyes</h3>
-                    <p>Desarrollador Backend</p>
-                    <p class="bio">Encargado de la base de datos.</p>
+                <div class="text-center mt-5">
+                    <a href="index.html">← Volver al inicio</a>
                 </div>
             </div>
-        </section>
-
-        <section class="mision">
-            <h2>Nuestra misión</h2>
-            <p>
-                Promover el bienestar emocional mediante el uso de la tecnología, brindando herramientas accesibles y seguras que permitan a las personas cuidar su salud mental desde cualquier lugar.
-            </p>
-        </section>
-
-        <section class="vision">
-            <h2>Nuestra visión</h2>
-            <p>
-                Ser una plataforma líder en apoyo psicológico digital, reconocida por su compromiso ético, humano e innovador con la comunidad.
-            </p>
-        </section>
-
-        <div style="margin-top: 30px; text-align: center;">
-            <a href="index.html" style="color: #3c4fff; font-weight: bold;">← Volver al inicio</a>
         </div>
     </main>
 
-    <footer>
-        <p>&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
-        <div class="footer-links">
-            <a href="contacto.html">Contacto</a>
+    <footer class="bg-dark-custom text-white p-4 mt-auto">
+        <div class="container d-flex justify-content-between align-items-center flex-wrap">
+            <p class="mb-0">&copy; 2025 Mente Libre. Todos los derechos reservados.</p>
+            <a href="contacto.html" class="text-white">Contacto</a>
         </div>
     </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
