--- a/html/registro.html
+++ b/html/registro.html
@@ -4,63 +4,79 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro - Mente Libre</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
-<body>
-    <header>
-        🧠 Mente Libre
+<body class="bg-light d-flex flex-column">
+    <header class="navbar navbar-dark bg-dark-custom shadow-sm">
+        <div class="container">
+            <a class="navbar-brand d-flex align-items-center" href="index.html">
+                <img src="../imagenes/logo.png" alt="Mente Libre" class="logo-lg">
+                <span class="h3 ms-2 mb-0 text-white">Mente Libre</span>
+            </a>
+        </div>
     </header>
 
-    <div class="contenedor-auth">
-        <h1>Regístrate</h1>
-        <p>Únete a nuestra comunidad de apoyo</p>
+    <main class="container d-flex align-items-center justify-content-center">
+        <div class="row justify-content-center w-100">
+            <div class="col-md-8 col-lg-6">
+                <div class="card shadow-sm border-0" style="margin-top: 2rem; margin-bottom: 2rem;">
+                    <div class="card-body p-4 p-lg-5">
+                        <h1 class="h3 card-title text-center mb-1">Regístrate</h1>
+                        <p class="text-center text-muted mb-4">Únete a nuestra comunidad de apoyo</p>
 
-        <div id="error-message" class="error-message"></div>
-        <div id="success-message" class="success-message"></div>
+                        <div id="error-message" class="alert alert-danger" style="display: none;"></div>
+                        <div id="success-message" class="alert alert-success" style="display: none;"></div>
 
-        <form id="registerForm" class="formulario-auth" onsubmit="return handleRegistro(event)">
-            <div class="grupo">
-                <label for="nombre">Nombre</label>
-                <input type="text" id="nombre" name="nombre" placeholder="Ingresa tu nombre" required>
+                        <form id="registerForm" class="row g-3" onsubmit="return handleRegistro(event)">
+                            <div class="col-md-6">
+                                <label for="nombre" class="form-label">Nombre</label>
+                                <input type="text" id="nombre" name="nombre" class="form-control" placeholder="Ingresa tu nombre" required>
+                            </div>
+
+                            <div class="col-md-6">
+                                <label for="apellido" class="form-label">Apellido</label>
+                                <input type="text" id="apellido" name="apellido" class="form-control" placeholder="Ingresa tu apellido" required>
+                            </div>
+
+                            <div class="col-12">
+                                <label for="email" class="form-label">Correo electrónico</label>
+                                <input type="email" id="email" name="email" class="form-control" placeholder="tu.correo@example.com" required>
+                            </div>
+
+                            <div class="col-12">
+                                <label for="userName" class="form-label">Nombre de usuario</label>
+                                <input type="text" id="userName" name="userName" class="form-control" placeholder="Elige tu nombre de usuario" required minlength="4">
+                            </div>
+
+                            <div class="col-md-6">
+                                <label for="password" class="form-label">Contraseña</label>
+                                <input type="password" id="password" name="password" class="form-control" placeholder="Mínimo 6 caracteres" required minlength="6">
+                            </div>
+
+                            <div class="col-md-6">
+                                <label for="passwordConfirm" class="form-label">Confirma contraseña</label>
+                                <input type="password" id="passwordConfirm" name="passwordConfirm" class="form-control" placeholder="Vuelve a escribirla" required>
+                            </div>
+
+                            <div class="col-12">
+                                <button type="submit" class="btn btn-primary w-100 mt-3">Registrarse</button>
+                            </div>
+                        </form>
+                        
+                        <p class="text-center text-muted small mt-4 mb-0">
+                            Al registrarte aceptas nuestras políticas de privacidad y términos y condiciones.
+                        </p>
+                    </div>
+                </div>
+                <p class="text-center mt-3 mb-4">
+                    ¿Ya tienes una cuenta? <a href="login.html">Ingresa aquí</a>
+                </p>
             </div>
+        </div>
+    </main>
 
-            <div class="grupo">
-                <label for="apellido">Apellido</label>
-                <input type="text" id="apellido" name="apellido" placeholder="Ingresa tu apellido" required>
-            </div>
-
-            <div class="grupo">
-                <label for="email">Correo electrónico</label>
-                <input type="email" id="email" name="email" placeholder="tu.correo@example.com" required>
-            </div>
-
-            <div class="grupo">
-                <label for="userName">Nombre de usuario</label>
-                <input type="text" id="userName" name="userName" placeholder="Elige tu nombre de usuario" required minlength="4">
-            </div>
-
-            <div class="grupo">
-                <label for="password">Contraseña</label>
-                <input type="password" id="password" name="password" placeholder="Ingresa una contraseña segura" required minlength="6">
-            </div>
-
-            <div class="grupo">
-                <label for="passwordConfirm">Confirma contraseña</label>
-                <input type="password" id="passwordConfirm" name="passwordConfirm" placeholder="Vuelve a escribir tu contraseña" required>
-            </div>
-
-            <button type="submit" class="btn-submit">Registrarse</button>
-        </form>
-
-        <p style="margin-top: 20px; text-align: center; font-size: 0.85rem; color: #666;">
-            Al registrarte aceptas nuestras políticas de privacidad y términos y condiciones.
-        </p>
-
-        <p style="margin-top: 15px; text-align: center;">
-            ¿Ya tienes una cuenta? <a href="login.html" style="color: #3c4fff; font-weight: bold;">Ingresa aquí</a>
-        </p>
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="../js/auth.js"></script>
 </body>
 </html>
